# tamil-tts-mlx

./: .gitignore  README.md  pyproject.toml
configs/: smoke_test.json  tamil_female_vits.json
docs/: MLX_RUNBOOK.md  MLX_TTS_LEARNINGS.md  RUNBOOK_M1_STUDIO.md  model_card.md
rust/: Cargo.toml
rust/examples/: synthesize_mlx.rs  synthesize_ns.rs
rust/src/: lib.rs  mlx_ns_tts.rs  mlx_tts.rs
scripts/: overnight_continue.sh
tamiltts/data/: prepare.py
tamiltts/mlx/: __init__.py  aligner.py  audio.py  dataset.py  diag_attn.py  diag_collapse.py  diag_ns.py  export_hifigan.py  export_onnx.py  export_onnx_ns.py  extract_durations.py  extract_variance.py  hifigan.py  infer.py  infer_ns.py  mlx_aligner.py  model.py  model_ns.py  onnx_infer.py  onnx_infer_ns.py  preprocess.py  tb_eval.py  tb_eval_ns.py  train.py  train_ns.py  verify_inventory.py
tamiltts/sdk/: __init__.py  cli.py  synthesizer.py
tests/: make_dummy_model.py  make_synthetic_dataset.py
videos/intro/: build_script.py  package-lock.json  package.json
videos/intro/src/: Intro.tsx  Root.tsx  script.json
