[project]
name = "tamil-tts"
version = "0.1.0"
description = "Small, fast, CPU-friendly Tamil text-to-speech (MLX -> ONNX), trained on the IndicTTS Tamil corpus."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Ashwanth Kumar", email = "ashwanth.kumar@gmail.com" }]
keywords = ["tts", "tamil", "mlx", "onnx", "speech-synthesis"]

# Lightweight runtime deps: enough to RUN inference from the ONNX model.
dependencies = [
    "numpy>=1.24",
    "onnxruntime>=1.17",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# Deps for data prep + TRAINING + ONNX export on an Apple-Silicon (MLX) Mac.
train = [
    "mlx>=0.18",            # acoustic model training on the Apple GPU
    "torch>=2.6,<2.9",      # CTC forced-aligner (CPU) + torch.onnx / HiFi-GAN export
    "onnx>=1.16",           # torch.onnx export
    "librosa>=0.10",        # mel front-end / preprocessing
    "tensorboard",          # training + eval logging
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tamiltts"]
