[package]
name = "tamil-tts"
version = "0.2.0"
edition = "2021"
description = "Rust SDK for tamil-tts: non-AR ONNX Tamil speech synthesis on CPU with speed/pitch/energy control"
license = "MIT"
repository = "https://github.com/ashwanthkumar/tamil-tts"

[lib]
name = "tamil_tts"
path = "src/lib.rs"

[dependencies]
ort = { version = "=2.0.0-rc.12" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
anyhow = "1"
regex = "1"

[[example]]
name = "synthesize_ns"
path = "examples/synthesize_ns.rs"

[[example]]
name = "normalize_check"
path = "examples/normalize_check.rs"
